--- a/about_us.html
+++ b/about_us.html
@@ -22,13 +22,13 @@
 			</div>
 			<div id="l_menu_area" class="menu_area col-9">
 			
-				<a href=""><h6>INICIO</h6></a>
-				<a href=""><h6>SERVICIOS</h6></a>
-				<a href=""><h6>QUIENES SOMOS</h6></a>
-				<a href=""><h6>PREGUNTAS</h6></a>
-				<a href=""><h6>CONTACTO</h6></a>
-				<a href=""><h6>NUESTRO STAFF</h6></a>
-				<a href=""><h6>NUESTROS CASOS</h6></a>
+				<a class="btn_inicio" href="index.html"><h6>INICIO</h6></a>
+				<a class="btn_servicios" href="services.html"><h6>SERVICIOS</h6></a>
+				<a class="btn_quienes_somos" href="about_us.html"><h6>QUIENES SOMOS</h6></a>
+				<a class="btn_preguntas" href=""><h6>PREGUNTAS</h6></a>
+				<a class="btn_contacto" href="contact.html"><h6>CONTACTO</h6></a>
+				<a class="btn_staff hide" href=""><h6>NUESTRO STAFF</h6></a>
+				<a class="btn_casos hide" href=""><h6>NUESTROS CASOS</h6></a>
 
 			
 			</div>
@@ -38,13 +38,13 @@
 				   <div class="burger_menu" id="s_menu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> 
 				   </div>
 				   <div class="dropdown-menu" aria-labelledby="s_menu">
-					  <button class="dropdown-item" type="button"><h3>INICIO</h3></button>
-					  <button class="dropdown-item" type="button"><h3>SERVICIOS</h3></button>
-					  <button class="dropdown-item" type="button"><h3>QUIENES SOMOS</h3></button>
-					  <button class="dropdown-item" type="button"><h3>PREGUNTAS</h3></button>
-					  <button class="dropdown-item" type="button"><h3>CONTACTO</h3></button>
-					  <button class="dropdown-item" type="button"><h3>NUESTRO STAFF</h3></button>
-					  <button class="dropdown-item" type="button"><h3>NUESTROS CASOS</h3></button>
+					  <button class="dropdown-item" type="button" onClick="location.href='index.html'"><h3>INICIO</h3></button>
+					  <button class="dropdown-item" type="button" onClick="location.href='services.html'"><h3>SERVICIOS</h3></button>
+					  <button class="dropdown-item" type="button" onClick="location.href='about_us.html'"><h3>QUIENES SOMOS</h3></button>
+					  <button class="dropdown-item" type="button" onClick="location.href='index.html'"><h3>PREGUNTAS</h3></button>
+					  <button class="dropdown-item" type="button" onClick="location.href='contact.html'"><h3>CONTACTO</h3></button>
+					  <button class="dropdown-item hide" type="button" onClick="location.href='index.html'"><h3>NUESTRO STAFF</h3></button>
+					  <button class="dropdown-item hide" type="button" onClick="location.href='index.html'"><h3>NUESTROS CASOS</h3></button>
 				   </div>
 				</div>
 				
