Creacion pagina de servicios

--- a/services.html
+++ b/services.html
@@ -9,6 +9,77 @@
 </head>
 
 <body>
+
+	<header>
+	
+		<div class="top_bar col-12"></div>
+		
+		<div class="bottom_bar col-12">
+		
+			<div class="logo_area col-3">
+			
+				<img src="img/logo.png" alt="logo">
+				
+			</div>
+			<div id="l_menu_area" class="menu_area col-9">
+			
+				<a class="btn_inicio" href="index.html"><h6>INICIO</h6></a>
+				<a class="btn_servicios" href="services.html"><h6>SERVICIOS</h6></a>
+				<a class="btn_quienes_somos" href="about_us.html"><h6>QUIENES SOMOS</h6></a>
+				<a class="btn_preguntas" href=""><h6>PREGUNTAS</h6></a>
+				<a class="btn_contacto" href="contact.html"><h6>CONTACTO</h6></a>
+				<a class="btn_staff hide" href=""><h6>NUESTRO STAFF</h6></a>
+				<a class="btn_casos hide" href=""><h6>NUESTROS CASOS</h6></a>
+
+			
+			</div>
+			<div id="s_menu_area" class="menu_area col-9">
+			
+				<div class="dropdown">
+				   <div class="burger_menu" id="s_menu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> 
+				   </div>
+				   <div class="dropdown-menu" aria-labelledby="s_menu">
+					  <button class="dropdown-item" type="button" onClick="location.href='index.html'"><h3>INICIO</h3></button>
+					  <button class="dropdown-item" type="button" onClick="location.href='services.html'"><h3>SERVICIOS</h3></button>
+					  <button class="dropdown-item" type="button" onClick="location.href='about_us.html'"><h3>QUIENES SOMOS</h3></button>
+					  <button class="dropdown-item" type="button" onClick="location.href='index.html'"><h3>PREGUNTAS</h3></button>
+					  <button class="dropdown-item" type="button" onClick="location.href='contact.html'"><h3>CONTACTO</h3></button>
+					  <button class="dropdown-item hide" type="button" onClick="location.href='index.html'"><h3>NUESTRO STAFF</h3></button>
+					  <button class="dropdown-item hide" type="button" onClick="location.href='index.html'"><h3>NUESTROS CASOS</h3></button>
+				   </div>
+				</div>
+				
+			</div>
+			
+		</div>
+		
+	</header>
+
+	<div id="sevices_section">
+		<div id="services_banner">
+			<img class="banner" src="img/Asset 1.png" alt="banner">
+			<div class="w-100 white_filter"></div>
+			<div class="title_container">
+				<h1 class="title">Servicios</h1>
+			</div>
+		</div>
+		<div id="button_section">
+			<button class="service_button blue_button">Volumetria Hepatítica</button>
+			<button class="service_button turquoise_button">Volumetria Renal</button>
+			<button class="service_button blue_button">Planeamiento Quirúrgico</button>
+			<button class="service_button turquoise_button">Nodulo Pulmonar</button>
+			<button class="service_button blue_button">Análisis Pulmonar</button>
+			<button class="service_button turquoise_button">Seguimiento Oconologico</button>
+			<button class="service_button blue_button">Postprocesado Vascular</button>
+		</div>
+		<div id="service_section">
+			<div class="info_section">
+				<h2 class="info_title">VOLUMETRIA RENAL</h2>
+				<p class="info-text">Consiste en una avanzada técnica de manipulación para el post procesado de imágenes mediante segmentación asistida con Inteligencia Artificial, utilizando el software Synapse 3D. Se obtiene imágenes tridimensionales los riñones, su relación con estructuras óseas, así como imágenes del sistema vascular y excretor (ureteros). Se puede identificar masas o tumores, cálculos y quistes. Se pueden obtener volúmenes, y aplicar diversos planeamientos quirúrgicos que mejora la toma de decisiones. Se puede realizar simulación de endoscopía, una vez que el cirujano establezca el posible abordaje. Se realiza a partir de imágenes de TC, pudiendo mezclar varias fases de contraste.</p>
+			</div>
+			<img class="service_img" src="img/volumetria_renal_1.png" alt="">
+		</div>
+	</div>
 	
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
