no se ni que hice XD

--- a/about_us.html
+++ b/about_us.html
@@ -25,7 +25,7 @@
 				<a class="btn_inicio" href="index.html"><h6>INICIO</h6></a>
 				<a class="btn_servicios" href="services.html"><h6>SERVICIOS</h6></a>
 				<a class="btn_quienes_somos" href="about_us.html"><h6>QUIENES SOMOS</h6></a>
-				<a class="btn_preguntas" href=""><h6>PREGUNTAS</h6></a>
+				<a class="btn_preguntas hide" href=""><h6>PREGUNTAS</h6></a>
 				<a class="btn_contacto" href="contact.html"><h6>CONTACTO</h6></a>
 				<a class="btn_staff hide" href=""><h6>NUESTRO STAFF</h6></a>
 				<a class="btn_casos hide" href=""><h6>NUESTROS CASOS</h6></a>
@@ -41,7 +41,7 @@
 					  <button class="dropdown-item" type="button" onClick="location.href='index.html'"><h3>INICIO</h3></button>
 					  <button class="dropdown-item" type="button" onClick="location.href='services.html'"><h3>SERVICIOS</h3></button>
 					  <button class="dropdown-item" type="button" onClick="location.href='about_us.html'"><h3>QUIENES SOMOS</h3></button>
-					  <button class="dropdown-item" type="button" onClick="location.href='index.html'"><h3>PREGUNTAS</h3></button>
+					  <button class="dropdown-item hide" type="button" onClick="location.href='index.html'"><h3>PREGUNTAS</h3></button>
 					  <button class="dropdown-item" type="button" onClick="location.href='contact.html'"><h3>CONTACTO</h3></button>
 					  <button class="dropdown-item hide" type="button" onClick="location.href='index.html'"><h3>NUESTRO STAFF</h3></button>
 					  <button class="dropdown-item hide" type="button" onClick="location.href='index.html'"><h3>NUESTROS CASOS</h3></button>
@@ -55,7 +55,7 @@
 	</header>
 
 	<div id="about_us_section">
-		<img class="w-100 background" src="img/Asset 1.png" alt="background">
+		<img class="w-100 background" src="img/asset_1.jpg" alt="background">
 		<div class="w-100 white_filter"></div>
 		<div id="text_container">
 			<h1 class="about_us_title">Quiénes Somos</h1>
